# AI_humanoid_robots_hakathon

./: .gitignore  README.md  requirements.txt
.specify/memory/: constitution.md
backend/: .gitignore  debug_query.py  list_content.py  main.py  pyproject.toml  test_general.py  test_runner.py
backend/docs/: setup.md
backend/src/: chunker.py  cohere_client.py  connection_test.py  crawler.py  embedder.py  embedding_generator.py  extractor.py  logger.py  payload_validator.py  qdrant_search.py  requirements.txt  result_formatter.py  retrieval.py  storage.py  utils.py
backend/src/config/: settings.py
backend/tests/: test_chunker.py  test_crawler.py  test_embedder.py  test_extractor.py  test_integration.py  test_qdrant_retrieval.py  test_storage.py
frontend/: .eslintrc.js  .eslintrc.json  .eslintrc.mdx-validation.js  docusaurus.config.ts  jest.config.js  package-lock.json  package.json  sidebars.ts
frontend/docs/: intro.md  references.md
frontend/docs/1-ros2-fundamentals/: index.md
frontend/docs/2-gazebo-unity/: index.md
frontend/docs/3-nvidia-isaac/: index.md
frontend/docs/4-vision-language-action/: index.md
frontend/docs/5-conversational-robotics/: index.md
frontend/my-website/: docusaurus.config.ts
frontend/src/: setupTests.ts
specs/002-qdrant-retrieval-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-ai-robotics-textbook/: chapter-structure.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-website-rag-ingestion/: plan.md  spec.md  tasks.md
(+31 files in other folders)
